<resources>
    <string name="app_name">Dear Winter</string>

    <!--Temperature-->
    <string name="def_value">00.0°</string>
    <string name="hello">Hello,</string>
    <string name="reload">Reload</string>
    <string name="cancel">Cancel</string>
    <string name="username">userName!</string>
    <string name="temp">Live Temperature</string>

    <!--Login-->
    <string name="login_status">Login Status?</string>
    <string name="new_user_signing">New Adventure, Sign-In?</string>

    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="weather_location">Weather Location</string>
    <string name="gps_settings">Location is settings</string>
    <string name="use_device_location">Use device location</string>
    <string name="allow_the_app_to_get_your_location">Allow the app to get your location</string>
    <string name="the_location_for_which_the_weather_is_displayed">The location for which the weather is displayed</string>
    <string name="gps_not_enabled">Location is not enabled. Do you want to go to settings menu?</string>
    <string name="please_set_location">Please, set location manually in settings</string>

</resources>
