<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:padding="@dimen/_5sdp"
        app:cardBackgroundColor="@color/blue_200"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_3sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:background="@drawable/card_gradient"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@id/temp_circle_layout"
                android:orientation="vertical">

                <TextView
                    style="@style/_mainTitle"
                    android:text="@string/temp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/text_location"
                    style="@style/_locationTitle"
                    android:text="@string/location"
                    tools:ignore="UseCompatTextViewDrawableXml" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/temp_circle_layout"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/rounded_oval_shape"
                android:elevation="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/text_temp"
                    style="@style/_tempTitle"
                    android:layout_centerInParent="true"
                    android:text="@string/def_value" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
